tests/errors/syn.expected-do-or-open-brace.branch-while-post-condition.or
main :: () -> void {
    while true x;
};
